--- a/index.html
+++ b/index.html
@@ -33,24 +33,17 @@
       margin-bottom: 0.5rem;
     }
 
-    .nav-ribbon {
-      width: 100%;
-      background: linear-gradient(to right, #000000, #1a1a1a);
-      padding: 0.75rem 2rem;
-      display: flex;
-      justify-content: center;
-    }
-
     nav {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 2rem;
+      margin-top: 0.5rem;
     }
 
     nav a {
       text-decoration: none;
-      color: #fff;
+      color: #111;
       font-weight: 600;
       font-size: 1rem;
     }
@@ -80,30 +73,25 @@
       background: rgba(0, 0, 0, 0.4);
     }
 
-    .glass-pane {
-      background: rgba(255, 255, 255, 0.15);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border-radius: 15px;
-      padding: 2rem;
-      max-width: 900px;
+    .hero-content {
       text-align: center;
       color: white;
+      max-width: 900px;
     }
 
-    .glass-pane h1 {
+    .hero-content h1 {
       font-size: 3rem;
       font-weight: bold;
       margin-bottom: 1rem;
     }
 
-    .glass-pane h2 {
+    .hero-content h2 {
       font-size: 2rem;
       font-weight: 300;
       margin-bottom: 1rem;
     }
 
-    .glass-pane p {
+    .hero-content p {
       font-size: 1.1rem;
       margin-bottom: 2rem;
     }
@@ -180,25 +168,24 @@
 </head>
 <body>
   <header>
-    <img class="logo" src="https://github.com/Resolutiontechconstructions/Tech/blob/main/images/logo.jpg" alt="Resolution Tech Logo"/>
-    <div class="nav-ribbon">
-      <nav>
-        <a href="#services">Services</a>
-        <a href="#advantage">AI Advantage</a>
-        <a href="#contact">Contact</a>
-        <a href="#firm">Our Firm</a>
-        <a href="#locations">Our Locations</a>
-      </nav>
-    </div>
+    <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Logo.png" alt="Resolution Tech Logo"/>
+    <nav>
+      <a href="#services">Services</a>
+      <a href="#advantage">AI Advantage</a>
+      <a href="#contact">Contact</a>
+      <a href="#firm">Our Firm</a>
+      <a href="#locations">Our Locations</a>
+    </nav>
   </header>
 
+  <!-- Updated Single Video Background Section -->
   <section class="video-section">
     <video autoplay muted loop playsinline class="background-video">
       <source src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Resolutiontechmainvideop.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="video-overlay">
-      <div class="glass-pane">
+      <div class="hero-content">
         <h1>Resolution Tech Constructions</h1>
         <h2>Engineering the future with artificial intelligence</h2>
         <p>Delivering premium construction solutions across residential, commercial, and industrial sectors with unmatched precision and efficiency.</p>
@@ -212,15 +199,56 @@
     <div class="features-grid">
       <div class="card">
         <h3>Time Optimization</h3>
-        <p>AI cuts project timelines by up to 40% by automating repetitive tasks, reducing admin work, and streamlining content creation.</p>
+        <p>AI cuts project timelines by up to 40% by automating repetitive tasks, reducing admin work, and streamlining content creation. Less time managing, more time building — with faster decisions, instant reports, and efficient workflows.</p>
       </div>
       <div class="card">
         <h3>Reduced Overhead</h3>
-        <p>AI reduces overhead by automating admin, management, and repetitive tasks — cutting down labor hours and inefficiencies.</p>
+        <p>AI reduces overhead by automating admin, management, and repetitive tasks — cutting down labor hours and inefficiencies. You only pay for the expert-driven creative and technical work that truly adds value.</p>
       </div>
       <div class="card">
         <h3>Error Prevention</h3>
-        <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate.</p>
+        <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate. The result: higher quality output, fewer delays, and reduced liability across every project stage.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="features" id="services">
+    <h2 style="text-align: center">Our Services</h2>
+    <div class="services-grid">
+      <div class="service-item">
+        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png" alt="Structural Engineering">
+        <div class="service-description">
+          <h3>Structural Engineering</h3>
+          <p>Advanced structural analysis, steel and concrete design, retrofit strategies, and integrity evaluations for all project types.</p>
+        </div>
+      </div>
+      <div class="service-item">
+        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png" alt="Civil Engineering">
+        <div class="service-description">
+          <h3>Civil Engineering</h3>
+          <p>Site development, grading, drainage, utility coordination, roadway layout, and compliance with local codes and permits.</p>
+        </div>
+      </div>
+      <div class="service-item">
+        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png" alt="Building Envelope">
+        <div class="service-description">
+          <h3>Building Envelope</h3>
+          <p>Waterproofing, facade assessment, roofing systems, thermal performance, and energy-efficient enclosure solutions.</p>
+        </div>
+      </div>
+      <div class="service-item">
+        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png" alt="MEP Services">
+        <div class="service-description">
+          <h3>MEP Services</h3>
+          <p>Mechanical, electrical, and plumbing design with code compliance, load analysis, and energy optimization.</p>
+        </div>
+      </div>
+      <div class="service-item">
+        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png" alt="Special Inspections">
+        <div class="service-description">
+          <h3>Special Inspections</h3>
+          <p>Third-party inspections for structural steel, concrete, masonry, fireproofing, and more to ensure code and safety compliance.</p>
+        </div>
       </div>
     </div>
   </section>
