--- a/index.html
+++ b/index.html
@@ -1,237 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Resolution Tech Constructions</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Open Sans', sans-serif;
-      background-color: #ffffff;
-      color: #111;
-      line-height: 1.6;
-    }
-
-    header {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 1rem 2rem;
-      border-bottom: 1px solid #ddd;
-    }
-
-    .logo {
-      width: 120px;
-      margin-bottom: 0.5rem;
-    }
-
-    nav {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-      margin-top: 0.5rem;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #111;
-      font-weight: 600;
-      font-size: 1rem;
-    }
-
-    .video-section {
-      position: relative;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    .background-video {
-      position: absolute;
-      top: 0;
-      left: 0;
-      min-width: 100%;
-      min-height: 100%;
-      object-fit: cover;
-      z-index: -1;
-    }
-
-    .video-overlay {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
-      padding: 3rem 2rem;
-      background: rgba(0, 0, 0, 0.4);
-    }
-
-    .hero-content {
-      text-align: center;
-      color: white;
-      max-width: 900px;
-    }
-
-    .hero-content h1 {
-      font-size: 3rem;
-      font-weight: bold;
-      margin-bottom: 1rem;
-    }
-
-    .hero-content h2 {
-      font-size: 2rem;
-      font-weight: 300;
-      margin-bottom: 1rem;
-    }
-
-    .hero-content p {
-      font-size: 1.1rem;
-      margin-bottom: 2rem;
-    }
-
-    .cta-button {
-      padding: 0.8rem 1.5rem;
-      background-color: #008080;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-
-    .features, .tech, .process, .contact, footer {
-      padding: 4rem 2rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .features-grid, .services-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-    }
-
-    .card {
-      background: #f9f9f9;
-      padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.05);
-      text-align: center;
-    }
-
-    .service-item {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.03);
-      overflow: hidden;
-      text-align: center;
-    }
-
-    .service-item img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-bottom: 1px solid #eee;
-    }
-
-    .service-description {
-      padding: 1rem;
-    }
-
-    .service-description h3 {
-      margin-bottom: 0.5rem;
-      font-size: 1.2rem;
-      font-weight: 700;
-    }
-
-    .service-description p {
-      font-size: 0.95rem;
-      color: #444;
-    }
-
-    footer {
-      background: #f1f1f1;
-      padding: 2rem;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #555;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Logo.png" alt="Resolution Tech Logo"/>
-    <nav>
-      <a href="#services">Services</a>
-      <a href="#advantage">AI Advantage</a>
-      <a href="#contact">Contact</a>
-      <a href="#firm">Our Firm</a>
-      <a href="#locations">Our Locations</a>
-    </nav>
-  </header>
-
-  <section class="video-section">
-    <video autoplay muted loop playsinline class="background-video">
-      <source src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Resolutiontechmainvideop.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <div class="video-overlay">
-      <div class="hero-content">
-        <h1>Resolution Tech Constructions</h1>
-        <h2>Engineering the future with artificial intelligence</h2>
-        <p>Delivering premium construction solutions across residential, commercial, and industrial sectors with unmatched precision and efficiency.</p>
-        <button class="cta-button">Explore AI Advantage</button>
+<section class="features" id="services">
+  <h2 style="text-align: center">Our Services</h2>
+  <div class="services-grid" style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 2rem;">
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png">
+      <div class="service-description">
+        <h3>Structural Design and Analysis</h3>
+        <p>Safe, code-compliant structural systems designed for new buildings or for strengthening existing ones.</p>
       </div>
     </div>
-  </section>
-
-  <section class="features" id="advantage">
-    <h2 style="text-align: center">The AI Advantage</h2>
-    <div class="features-grid">
-      <div class="card">
-        <h3>Time Optimization</h3>
-        <p>AI cuts project timelines by up to 40% by automating repetitive tasks, reducing admin work, and streamlining content creation.</p>
-      </div>
-      <div class="card">
-        <h3>Reduced Overhead</h3>
-        <p>AI reduces overhead by automating admin, management, and repetitive tasks — cutting labor hours and inefficiencies.</p>
-      </div>
-      <div class="card">
-        <h3>Error Prevention</h3>
-        <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate.</p>
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png">
+      <div class="service-description">
+        <h3>Restoration and Rehabilitation Engineering</h3>
+        <p>Aged, damaged, or deteriorated buildings are evaluated and restored to ensure long-term safety and performance.</p>
       </div>
     </div>
-  </section>
-
-  <section class="features" id="services">
-    <h2 style="text-align: center">Our Services</h2>
-    <div class="services-grid">
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Structural Design and Analysis</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Restoration and Rehabilitation Engineering</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Forensic Engineering and Expert Reports</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png"><div class="service-description"><h3>Inspection and Compliance Services</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png"><div class="service-description"><h3>Construction Administration</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Building Facade Assessment and Repair</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Moisture Intrusion and Envelope Diagnostics</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Roofing and Flashing Services</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png"><div class="service-description"><h3>Building Envelope CAD and Design Detailing</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png"><div class="service-description"><h3>Envelope Construction Administration</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Discipline Specific CAD Support</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Subscription Based Structural Support</h3></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Additional Services</h3></div></div>
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png">
+      <div class="service-description">
+        <h3>Forensic Engineering and Expert Reports</h3>
+        <p>Root causes of building failures are uncovered and documented for insurance, legal, and technical purposes.</p>
+      </div>
     </div>
-  </section>
-
-  <footer>
-    &copy; 2025 Resolution Tech Constructions. All rights reserved.
-  </footer>
-</body>
-</html>
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png">
+      <div class="service-description">
+        <h3>Inspection and Compliance Services</h3>
+        <p>Critical inspections and evaluations are conducted to confirm structural integrity and building code compliance.</p>
+      </div>
+    </div>
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png">
+      <div class="service-description">
+        <h3>Construction Administration</h3>
+        <p>Project execution is supported through document reviews, contractor coordination, and field quality checks.</p>
+      </div>
+    </div>
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png">
+      <div class="service-description">
+        <h3>Building Façade Assessment and Repair</h3>
+        <p>Exterior walls and façade systems are assessed and repaired to address cracks, displacement, and safety risks.</p>
+      </div>
+    </div>
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png">
+      <div class="service-description">
+        <h3>Moisture Intrusion and Envelope Diagnostics</h3>
+        <p>Water intrusion points are detected using testing methods, with tailored repair strategies developed accordingly.</p>
+      </div>
+    </div>
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png">
+      <div class="service-description">
+        <h3>Roofing and Flashing Services</h3>
+        <p>Roof conditions are evaluated and repaired or newly designed to ensure protection from weather and moisture.</p>
+      </div>
+    </div>
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png">
+      <div class="service-description">
+        <h3>Building Envelope CAD and Design Detailing</h3>
+        <p>Highly detailed CAD drawings illustrate key components of the exterior envelope for accurate repair or new construction.</p>
+      </div>
+    </div>
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png">
+      <div class="service-description">
+        <h3>Envelope Construction Administration</h3>
+        <p>Façade and roof repair projects are overseen to maintain quality, schedule, and material compliance.</p>
+      </div>
+    </div>
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png">
+      <div class="service-description">
+        <h3>Discipline Specific CAD Support</h3>
+        <p>Professionally drafted technical drawings support all trades—structure, architecture, MEP, electrical, plumbing, and site work.</p>
+      </div>
+    </div>
+    <div class="service-item" style="grid-column: 2 / span 2;">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png">
+      <div class="service-description">
+        <h3>Additional Services</h3>
+        <p>Covers a wide range of construction-related support beyond the listed categories—tailored solutions for unique project needs.</p>
+      </div>
+    </div>
+  </div>
+</section>
